--- a/table-detection/pyproject.toml
+++ b/table-detection/pyproject.toml
@@ -6,8 +6,10 @@ authors = ["Võ Đình Đạt <vodinhdat03@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = "^3.10"
 transformers = "^4.39.2"
+numpy = "^1.26.4"
+opencv-python = "^4.9.0.80"
 torch = "^2.2.2"
 
 
