--- a/table-recognition/pyproject.toml
+++ b/table-recognition/pyproject.toml
@@ -7,6 +7,10 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
+transformers = "^4.39.2"
+numpy = "^1.26.4"
+opencv-python = "^4.9.0.80"
+torch = "^2.2.2"
 
 
 [build-system]
