--- a/text-recognition/pyproject.toml
+++ b/text-recognition/pyproject.toml
@@ -6,7 +6,14 @@ authors = ["Võ Đình Đạt <vodinhdat03@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = "^3.10"
+torch = "^2.2.2"
+lightning = "^2.2.1"
+torchvision = "^0.17.2"
+wandb = "^0.16.5"
+albumentations = "^1.4.2"
+einops = "^0.7.0"
+opencv-python = "^4.9.0.80"
 
 
 [build-system]
