feat: update tokenizer, update model

--- a/text-recognition/pyproject.toml
+++ b/text-recognition/pyproject.toml
@@ -15,6 +15,8 @@ albumentations = "^1.4.2"
 einops = "^0.7.0"
 opencv-python = "^4.9.0.80"
 transformers = "^4.39.2"
+sentencepiece = "^0.2.0"
+tokenizers = "^0.15.2"
 
 
 [build-system]
