--- a/text-recognition/pyproject.toml
+++ b/text-recognition/pyproject.toml
@@ -7,9 +7,9 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-torch = "^2.2.2"
-lightning = "^2.2.1"
-torchvision = "^0.17.2"
+torch = "*"
+lightning = "*"
+torchvision = "*"
 wandb = "^0.16.5"
 albumentations = "^1.4.2"
 einops = "^0.7.0"
